--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,3 +41,19 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+      - name: Install COSCMD than Upload HTML
+        env:
+          COS_REGION: ${{ secrets.WWW_Region }}
+          COS_BUCKET: ${{ secrets.WWW_Bucket }}
+          COS_SECRET_ID: ${{ secrets.WWW_SecretId }}
+          COS_SECRET_KEY: ${{ secrets.WWW_SecretKey }}
+          local-dir: ./
+          cos-dir: /
+        run: |
+          sudo pip install coscmd
+          coscmd config -r ${{ env.COS_REGION }} -b ${{ env.COS_BUCKET }} -a ${{ env.COS_SECRET_ID}} -s ${{ env.COS_SECRET_KEY}}
+          coscmd upload -rsfy --delete ${{ env.local-dir}} ${{ env.cos-dir}}
+
+
+  
