--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -53,5 +53,5 @@ jobs:
         run: |
           sudo pip install coscmd
           coscmd config -r ${{ env.COS_REGION }} -b ${{ env.COS_BUCKET }} -a ${{ env.COS_SECRET_ID}} -s ${{ env.COS_SECRET_KEY}}
-          coscmd upload -rsfy --delete ${{ env.local-dir}} ${{ env.cos-dir}} --ignore ".git/" --ignore $(pwd)/.github/
+          coscmd upload -rsfy --delete ${{ env.local-dir}} ${{ env.cos-dir}} --ignore ".git/*" --ignore $(pwd)/.github/*
           echo $(pwd)
