--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,14 +44,14 @@ jobs:
 
       - name: Install COSCMD than Upload HTML
         env:
-          COS_REGION: ${{ secrets.WWW_Region }}
-          COS_BUCKET: ${{ secrets.WWW_Bucket }}
-          COS_SECRET_ID: ${{ secrets.WWW_SecretId }}
-          COS_SECRET_KEY: ${{ secrets.WWW_SecretKey }}
+          COS_REGION: ${{ secrets.COS_Region }}
+          COS_BUCKET: ${{ secrets.COS_Bucket }}
+          COS_SECRET_ID: ${{ secrets.COS_SecretId }}
+          COS_SECRET_KEY: ${{ secrets.COS_SecretKey }}
           local-dir: ./
           cos-dir: /
         run: |
-          rm -rf .git/ .github/
+          sudo rm -rf .git/ .github/
           sudo pip install coscmd
           coscmd config -r ${{ env.COS_REGION }} -b ${{ env.COS_BUCKET }} -a ${{ env.COS_SECRET_ID}} -s ${{ env.COS_SECRET_KEY}}
           coscmd upload -rsfy --delete ${{ env.local-dir}} ${{ env.cos-dir}}
