--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,17 +41,11 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-      - name: Install COSCMD than Upload HTML
-        env:
-          COS_REGION: ${{ secrets.COS_Region }}
-          COS_BUCKET: ${{ secrets.COS_Bucket }}
-          COS_SECRET_ID: ${{ secrets.COS_SecretId }}
-          COS_SECRET_KEY: ${{ secrets.COS_SecretKey }}
-          local-dir: ./
-          cos-dir: /
-        run: |
-          sudo rm -rf .git/ .github/
-          sudo pip install coscmd
-          coscmd config -r ${{ env.COS_REGION }} -b ${{ env.COS_BUCKET }} -a ${{ env.COS_SECRET_ID}} -s ${{ env.COS_SECRET_KEY}}
-          coscmd upload -rsfy --delete ${{ env.local-dir}} ${{ env.cos-dir}}
+      - name: Delete .git
+        run: sudo rm -rf .git/ .github/
+      - name: Install COSCMD
+        run: sudo pip install coscmd
+      - name: Config COSCMD
+        run: coscmd config -r ${{ secrets.COS_Region }} -b ${{ secrets.COS_Bucket }} -a ${{ secrets.COS_SecretId }} -s ${{ secrets.COS_SecretKey }}
+      - name: Upload HTML
+        run: coscmd upload -rsfy --delete ./ /
