--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,11 +41,9 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-      - name: Delete .git
-        run: sudo rm -rf .git/ .github/
-      - name: Install COSCMD
-        run: sudo pip install coscmd
-      - name: Config COSCMD
-        run: coscmd config -r ${{ secrets.COS_Region }} -b ${{ secrets.COS_Bucket }} -a ${{ secrets.COS_SecretId }} -s ${{ secrets.COS_SecretKey }}
-      - name: Upload HTML
-        run: coscmd upload -rsfy --delete ./ /
+      - name: Upload HTML to COS
+        run: |
+          sudo rm -rf .git/ .github/
+          sudo pip install coscmd
+          coscmd config -r ${{ secrets.COS_Region }} -b ${{ secrets.COS_Bucket }} -a ${{ secrets.COS_SecretId }} -s ${{ secrets.COS_SecretKey }}
+          coscmd upload -rsfy --delete ./ /
